<resources>
    <string name="app_name">Greek | Koine Interlinear New Testament</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export Image</string>
    <string name="action_share">Share Verse as Image</string>
    <string name="db_name">test_db</string>
    <string name="version">3</string>
    <string name="empty">empty</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booklabel">Book</string>
    <string-array name="books">
        <item>Matthew</item>
        <item>Mark</item>
        <item>Luke</item>
        <item>John</item>
        <item>Acts</item>
        <item>Romans</item>
        <item>1 Corinthians</item>
        <item>2 Corinthians</item>
        <item>Galatians</item>
        <item>Ephesians</item>
        <item>Philippians</item>
        <item>Colossians</item>
        <item>1 Thessalonians</item>
        <item>2 Thessalonians</item>
        <item>1 Timothy</item>
        <item>2 Timothy</item>
        <item>Titus</item>
        <item>Philemon</item>
        <item>Hebrews</item>
        <item>James</item>
        <item>1 Peter</item>
        <item>2 Peter</item>
        <item>1 John</item>
        <item>2 John</item>
        <item>3 John</item>
        <item>Jude</item>
        <item>Revelation</item>
    </string-array>
    <string name="title_activity_selection">Choose</string>
    <string name="chapterlabel">Chapter</string>
    <string name="verselabel">Verse</string>

    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>

    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="text_github">Feel free to contribute, copy or steal or do whatever you like to do with this code @ <a href="https://github.com/peace-shillong/Greek-Interlinear-New-Testament-Android">github.com/peace_shillong/Greek-Interlinear-New-Testament-Android</a></string>
    <string name="text_origin">An Updated version of the repository from <a href="https://github.com/stefankmitph/kint">github.com/stefankmitph/kint</a></string>
    <string name="missing_verse_text">This verse cannot be displayed because it\'s not included in the GNT Nestle 1904!</string>
    <string name="missing_verse_link">For more information visit <a href="http://en.wikipedia.org/wiki/List_of_Bible_verses_not_included_in_modern_translations">this link</a>.</string>
    <string name="text_permission">Please allow the app to write to storage so that you can export and share verse</string>
</resources>
