<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="peace_shillong.kint.SelectionActivity">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_title"
            android:paddingBottom="8dp"
            android:text="Free and open source version of the Greek New Testament including Strong's references, concordances and lemmas." />

        <TextView
            android:id="@+id/booklabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_description"
            android:paddingTop="16dp"
            android:text="@string/booklabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerbooks"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/booklabel"
            android:entries="@array/books"
            android:spinnerMode="dialog"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/chapterlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerbooks"
            android:text="@string/chapterlabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerchapters"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chapterlabel"
            android:entries="@array/books"
            android:spinnerMode="dialog"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/chapterstext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerchapters"
            android:hint="Chapter"
            android:text="1"
            android:inputType="number"
            android:maxLength="4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/verselabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chapterstext"
            android:text="@string/verselabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerverses"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verselabel"
            android:entries="@array/books"
            android:spinnerMode="dialog"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/versetext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerverses"
            android:hint="Verse"
            android:text="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="visible"/>

        <Button
            android:id="@+id/buttonGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/versetext"
            android:layout_centerHorizontal="true"
            android:text="go" />
        <TextView
            android:id="@+id/textView_origin"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonGo"
            android:text="@string/text_origin" />
        <TextView
            android:id="@+id/textView_github"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_origin"
            android:text="@string/text_github" />
        <TextView
            android:id="@+id/textView_permission"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_github"
            android:text="@string/text_permission"
            android:visibility="gone"
            android:textColor="#F00"/>
    </RelativeLayout>
</ScrollView>